# ups-jokers

klient/: .gitignore  card.py  clientgui.py  constants.py  logger.py  main.py  message_handler.py  message_types.py  network.py  pages_drawer.py
server/: .gitignore  CMakeLists.txt  Makefile  client_manager.c  client_manager.h  config.h  game_manager.c  game_manager.h  logger.c  logger.h  main.c  protocol.c  protocol.h  room_manager.c  room_manager.h  server_manager.c  server_manager.h  testing.txt
server/docs/krejcim_kivups_docs_src/: main.tex
server/fragments/: README.md  run.txt
server/tests/: nc_klient.sh  nc_server.sh
